NEXT (TBD)
------------------
- fix any mutable default argument

**depreciation**
- `warp_vrt_option` is replaced by `vrt_options` in rio_tiler.reader.part (#221)

2.0b5 (2020-07-31)
------------------
- add more verbosity to mosaic error (#214)

Breaking Changes:
- `rio_tiler.mosaic.reader.mosaic_reader` return `((tile, mask), assets_used)`
- `COGReader.info` is now a method instead of a property to align with other reader (#211)

2.0b4 (2020-07-30)
------------------
- add rio_tiler.io.base.BaseReader abstract class for COGReader and STACReader to inherit from
- STACReader raises `InvalidAssetName` for invalid asset name or `MissingAssets` when no assets is passed (#208)
- update rio_tiler.mosaic.reader.mosaic_reader to not use threadPool if threads <= 1 (#207)

Breaking Changes:
- Reader.spatial_info is a property (#203)
- assets is a keyword argument in STACReader stats/info/metadata

2.0b3 (2020-07-27)
------------------
- add `rio_tiler.mosaic` submodule (ref: https://github.com/cogeotiff/rio-tiler-mosaic/issues/16)

2.0b2 (2020-07-23)
------------------
- add boto3 in the dependency (#201)

2.0b1 (2020-07-22)
------------------
- switch to ContextManager for COG and STAC (rio_cogeo.io.COGReader, rio_cogeo.io.STACReader).
- COGReader.part and STACReader.part return data in BBOX CRS by default.
- STACReader now accept URL (https, s3).
- add more method for STAC (prewiew/point/part/info/stats).
- add expression for COG/STAC preview/point/part.
- add `masked` option in `rio_tiler.reader.point` to control weither or not it should return None or a value.
- remove mission specific tilers (#195).
- remove `rio_tiler.reader.multi_*` functions (replaced by rio_tiler.io.cogeo.multi_*).
- remove `rio_tiler.utils.expression` (replaced by expression options in tilers).

2.0a11 (2020-05-29)
------------------
- refactor `rio_tiler.utils.tile_exists` to allow raster bounds latitude == -90,90

2.0a10 (2020-05-29)
------------------