@@ -1,6 +1,7 @@
 NEXT (TBD)
 ------------------
-- fix any mutable default argument
+- add `utils.create_cutline` helper (#218)
+- remove any mutable default argument
 
 **depreciation**
 - `warp_vrt_option` is replaced by `vrt_options` in rio_tiler.reader.part (#221)
